--- a/webapp/src/main/webapp/resources/css/calendarWidget.css
+++ b/webapp/src/main/webapp/resources/css/calendarWidget.css
@@ -21,150 +21,131 @@
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
     box-shadow: -3px 5px 0 0 var(--lighttext);
-}
-.wrapper header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-header .icons{
-    display: flex;
-}
-header .icons span {
-    height: 30px;
-    width: 30px;
-    margin: 0 1px;
-    cursor: pointer;
-    color: var(--primary);
-    text-align: center;
-    line-height: 15px;
-    font-size: 1.5rem;
-    user-select: none;
-    border-radius: 50%;
-    display: flex; /* Center the content horizontally and vertically */
-    justify-content: center;
-    align-items: center;
+    & header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        & .icons span:hover{
+            background: var(--secondary);
+        }
+        & .current-date{
+            font-size: 1rem;
+            font-weight: 500;
+            color: var(--text);
+            cursor: pointer;
+        }
+    }
+
+    & .icons{
+        display: flex;
+
+        & span {
+            height: 30px;
+            width: 30px;
+            margin: 0 1px;
+            cursor: pointer;
+            color: var(--primary);
+            text-align: center;
+            line-height: 15px;
+            font-size: 1.5rem;
+            user-select: none;
+            border-radius: 50%;
+            display: flex; /* Center the content horizontally and vertically */
+            justify-content: center;
+            align-items: center;
+
+
+        }
+
+    }
 }
 
 
-.icons span:last-child{
-    margin-right: -10px;
-}
-header .icons span:hover{
-    background: var(--secondary);
-}
-header .current-date{
-    font-size: 1rem;
-    font-weight: 500;
-    color: var(--text);
-    cursor: pointer;
-}
+
 .calendar{
-    padding: 0px;
-}
-.calendar ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    justify-content: center; /* Center the weeks and days horizontally */
-    align-items: center; /* Center the weeks and days vertically */
-    padding: 0; /* Remove any padding */
+    padding: 0;
+    transition: all 0.3s ease-in-out;
+    & ul {
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        justify-content: center; /* Center the weeks and days horizontally */
+        align-items: center; /* Center the weeks and days vertically */
+        padding: 0; /* Remove any padding */
+
+    }
+
+    & li {
+        color: var(--text);
+        width: calc(100% / 7);
+        font-size: 0.7rem;
+        text-align: center; /* Center the text within each day */
+        padding: 5px; /* Add some padding to space out the days */
+    }
+    & .weeks {
+        margin-bottom: -5px;
+        width: 100%; /* Make the weeks take up the full width of the container */
+        & li{
+            font-weight: 550;
+            cursor: default;
+            color: var(--primary);
+        }
+    }
+    & .days li{
+        z-index: 1;
+        cursor: default;
+        position: relative;
+        margin-top: 15px;
+        transition: all 0.3s ease-in-out;
+        &.today {
+            color: var(--always-background); /* Set the text color to white */
+
+            &::before{
+                background: var(--primary);
+
+            }
+            &:hover{
+                transform: translateY(-2px);
+
+            }
+        }
+        &.event {
+            color: var(--always-background); /* Set the text color to white */
+            &::before {
+
+                background: var(--old-primary);
+            }
+
+        }
+        &.inactive{ /*dias posteriores al mes*/
+            color: var(--lighttext);
+        }
+
+        &:not(.active) {
+            &:hover::before {
+                background: var(--secondary);
+            }
+        }
+        &::before {
+            transition: all 0.3s ease-in-out;
+            position: absolute;
+            content: "";
+            left: 50%;
+            top: 50%;
+            height: 22px; /* Reduce the height and width to make the circle smaller */
+            width: 22px; /* Reduce the height and width to make the circle smaller */
+            z-index: -1;
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+        }
+        &:hover{
+            transform: translateY(-2px);
+            cursor: pointer;
+        }
+
+    }
 }
 
-.calendar .weeks {
-    margin-bottom: -5px;
-    width: 100%; /* Make the weeks take up the full width of the container */
-}
 
-.calendar .days {
-    margin-bottom: 15px;
-    width: 100%; /* Make the days take up the full width of the container */
-}
 
-.calendar li {
-    color: var(--text);
-    width: calc(100% / 7);
-    font-size: 0.7rem;
-    text-align: center; /* Center the text within each day */
-    padding: 5px; /* Add some padding to space out the days */
-}
-.calendar .weeks li{
-    font-weight: 550;
-    cursor: default;
-    color: var(--primary);
-}
-.calendar .days li{
-    z-index: 1;
-    cursor: default;
-    position: relative;
-    margin-top: 15px;
-}
-.days li.inactive{
-    color: var(--lighttext);
-}
-.days li.active{
-    color: var(--onbackground);
-}
-.days li::before {
-    position: absolute;
-    content: "";
-    left: 50%;
-    top: 50%;
-    height: 22px; /* Reduce the height and width to make the circle smaller */
-    width: 22px; /* Reduce the height and width to make the circle smaller */
-    z-index: -1;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-}
-.days li.active::before{
-    background: var(--primary);
-}
-.days li:not(.active):hover::before{
-    background: var(--secondary);
-}
 
-.days li:not(.inactive):hover{
-    cursor: pointer;
-}
-
-.calendar .days li.event {
-    z-index: 1;
-    cursor: pointer;
-    position: relative;
-    margin-top: 15px;
-    color: var(--onbackground); /* Set the text color to white */
-}
-
-.calendar .days li.event::before {
-    position: absolute;
-    content: "";
-    left: 50%;
-    top: 50%;
-    height: 22px;
-    width: 22px;
-    z-index: -1;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    background: var(--accent); /* Use the --accent color for the circle */
-}
-
-.calendar .days li.today {
-    z-index: 1;
-    cursor: pointer;
-    position: relative;
-    margin-top: 15px;
-    color: var(--onbackground); /* Set the text color to white */
-}
-
-.calendar .days li.today::before {
-    position: absolute;
-    content: "";
-    left: 50%;
-    top: 50%;
-    height: 22px;
-    width: 22px;
-    z-index: -1;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    background: var(--error); /* Use the --accent color for the circle */
-}
