--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -12,6 +12,23 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--background);
+    /*padding: 0;*/
+    /*--s: 150px; !* control the size *!*/
+    /*--c1: var(--background);*/
+    /*--c2: #fcf8f2;*/
+
+    /*--_g:*/
+    /*        var(--c1) 0%  5% ,var(--c2) 6%  15%,var(--c1) 16% 25%,var(--c2) 26% 35%,var(--c1) 36% 45%,*/
+    /*        var(--c2) 46% 55%,var(--c1) 56% 65%,var(--c2) 66% 75%,var(--c1) 76% 85%,var(--c2) 86% 95%,*/
+    /*        #0000 96%;*/
+    /*background:*/
+    /*        radial-gradient(50% 50% at 100% 0,var(--_g)),*/
+    /*        radial-gradient(50% 50% at 0 100%,var(--_g)),*/
+    /*        radial-gradient(50% 50%,var(--_g)),*/
+    /*        radial-gradient(50% 50%,var(--_g)) calc(var(--s)/2) calc(var(--s)/2)*/
+    /*        var(--c1);*/
+    /*background-size: var(--s) var(--s);*/
+
 }
 
 
@@ -220,4 +237,42 @@ p{
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
+}
+
+
+.skeleton {
+    --color-base: var(--text);
+    --color-highlight: var(--lighttext);
+    position: relative;
+    overflow: hidden;
+    width: 50%;
+    height: 40px;
+    background: var(--color-base);
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg,  var(--color-base),  var(--color-highlight),  var(--color-base));
+        animation: progress 1s ease-in-out infinite;
+    }
+}
+
+@keyframes progress {
+    0% {
+        transform: translate3d(-100%, 0, 0);
+    }
+    100% {
+        transform: translate3d(100%, 0, 0);
+    }
+}
+
+.w-7-12{
+    width: 13%;
+}
+.h-5rem{
+    height: 5rem;
 }
