--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -50,10 +50,11 @@ body {
     --bordercolor: #dadad0;
     --admin-color: #578a66;
     --always-background:#faf6e8;
+    --on-onbackground: rgb(238, 236, 231);
+
     --border-light: 5px;
     --border-radius: 10px;
     --border-hard: 50px;
-
     --border: 1px solid var(--primary);
 }
 .dark-mode {
@@ -74,6 +75,7 @@ body {
     --bordercolor: #646462;
     --admin-color: #8bcb9d;
     --always-background:#faf6e8;
+    --on-onbackground: rgb(63, 68, 75);
 
 }
 
@@ -217,6 +219,21 @@ p{
     align-items: center;
     gap: 1rem;
 }
+.f-c-s-c{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+}
+.f-c-sb-c{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
 .f-r-c-c{
     display: flex;
     flex-direction: row;
@@ -228,6 +245,20 @@ p{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+.f-r-s-c{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+}
+.f-r-st-c{
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
     align-items: center;
     gap: 1rem;
 }
