--- a/webapp/src/main/webapp/resources/css/calendarWidget.css
+++ b/webapp/src/main/webapp/resources/css/calendarWidget.css
@@ -30,7 +30,7 @@
         }
         & .current-date{
             font-size: 1rem;
-            font-weight: 500;
+            font-weight: bolder!important;
             color: var(--text);
             cursor: pointer;
         }
