--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -82,21 +82,22 @@ body {
     --light-green:  #9ad379;
 
 }
+html{
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: rgba(231, 231, 231, 0);
+        border: 1px solid rgba(202, 202, 202, 0);
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 8px;
+        background-color: var(--scrollbarthumb);
+    }
 
-html::-webkit-scrollbar {
-    width: 12px;
 }
 
-html::-webkit-scrollbar-track {
-    background-color: rgba(231, 231, 231, 0);
-    border: 1px solid rgba(202, 202, 202, 0);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
-}
-
-html::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background-color: var(--scrollbarthumb);
-}
 
 a {
     color: inherit;/* Inherit the color from the parent element */
