--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -9,7 +9,7 @@
 
 .column-left{
     flex: 1;
-    max-width: 400px;
+    max-width: 250px;
 }
 
 .column-right {
@@ -20,12 +20,15 @@
     max-width: 580px;
     flex: 4;
 }
-@media (max-width: 992px) {
+@media (max-width: 1200px) {
+    .row{
+        justify-content: center;
+    }
     .column-right {
         display: none;
     }
 }
-@media (max-width: 820px) {
+@media (max-width: 993px) {
     .column-left,
     .column-right {
         display: none;
@@ -95,12 +98,15 @@
         overflow: hidden;
         cursor: pointer;
         padding: 1em 1em;
-        width: 100%;
         transition: all 0.3s ease-in-out;
         background-color: var(--onbackground);
         color: var(--text);
         border: 1px solid var(--text);
         border-radius: var(--border-radius);
+        &.rounded{
+            border-radius: var(--border-hard) !important;
+
+        }
         &:hover ,
         &:active ,
         &:focus-visible {
