--- a/webapp/src/main/webapp/resources/css/postcard.css
+++ b/webapp/src/main/webapp/resources/css/postcard.css
@@ -36,6 +36,8 @@
 }
 
 .postcard-description {
+    font-weight: normal;
+    font-size: 12px;
     overflow: hidden;
     position: relative;
     color: var(--text);
