--- a/webapp/src/main/webapp/resources/css/service.css
+++ b/webapp/src/main/webapp/resources/css/service.css
@@ -3,7 +3,6 @@
 .service-card {
     overflow: hidden;
     width: 100%;
-    height: 650px;
     display: flex;
     flex-direction: column;
     background-color: var(--onbackground);
@@ -23,7 +22,6 @@
     }
 
     & .card-body {
-        height: 40%;
         position: relative;
         width: 100%;
         border-bottom: 1px solid var(--lighttext);
@@ -52,14 +50,13 @@
             border-radius: 50%;
         }
         & .inner {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, 0);
+            position: relative;
+            margin-top: 50px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            gap:1.2em;
         }
     }
 
