Add images and set calendar dates
Set images in comments and blogposts using fetch so that the loading
time gets reduced then automated date selection in calendar.

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1549,3 +1549,16 @@ h6 {
     }
 
 }
+
+
+.small-profile-picture{
+    width: 15px;
+    height: 15px;
+    border-radius: 50px;
+    object-fit: cover;
+    transition: all 0.3s ease-in-out;
+
+    & .rounded-placeholder{
+        background-color: var(--lighttext);
+    }
+}
