--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1475,12 +1475,11 @@ h6 {
         width: 100%;
         border-collapse: collapse;
         border-spacing: 0;
-        border: 1px solid var(--bordercolor);
-        border-radius: var(--border-radius);
         overflow: hidden;
         color: var(--text);
 
         & td {
+            padding: 0;
             text-align: center;
         }
 
@@ -1488,7 +1487,6 @@ h6 {
             font-weight: bolder;
             color: var(--text);
             text-align: center;
-
         }
         & th.day,
         & td.day
@@ -1547,13 +1545,66 @@ h6 {
             cursor: not-allowed;
         }
     }
+    & .cat.creation{
+        background-color: var(--onbackground);
+        width: 100%;
+        border-radius: 0;
+        border: 1px solid var(--lighttext);
+        overflow: hidden;
+        float: left;
+
+        & label {
+            &  span {
+                padding: 5px;
+                text-align: center;
+                display: block;
+                cursor: pointer;
+                transition: all 0.3s ease-in-out;
+
+                &:hover{
+                    color: var(--background);
+                    background-color: var(--old-primary);
+                }
+            }
+            & input {
+                position: absolute;
+                display: none;
+                color: var(--text) !important;
+                &  + span{
+                    color: var(--text);
+                }
+
+            }
+        }
+        & input:checked + span {
+            color: var(--background);
+            background-color: var(--primary);
+        }
+
+    }
 
 }
+
+
+
 
 
 .small-profile-picture{
     width: 15px;
     height: 15px;
+    border-radius: 50px;
+    object-fit: cover;
+    transition: all 0.3s ease-in-out;
+
+    & .rounded-placeholder{
+        background-color: var(--lighttext);
+    }
+}
+
+
+.big-profile-picture{
+    width: 100%;
+    height: 100%;
     border-radius: 50px;
     object-fit: cover;
     transition: all 0.3s ease-in-out;
