Fix bugs, make corrections, custom authenticate
Made a Custom authentication error handler so that the user sees his
mail again at login error. Fixed some correction items in postcard, tags
widget and other sections

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1060,7 +1060,7 @@ footer div {
 
 
 .cool-button.cool-small{
-    width: 120px;
+    width: 100%;
     &.dark-on-bg{
         background-color: var(--darkonbackground);
         padding: 5px 5px;
