--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -179,8 +179,8 @@ input[type="checkbox"] {
         position: absolute;
         content: '';
         display: block;
-        top: 2px;
-        left: 7px;
+        top: 0;
+        left: 5px;
         width: 8px;
         height: 14px;
         border-style: solid;
@@ -202,10 +202,11 @@ input[type="checkbox"] {
     }
     &:focus-visible,
     &:hover{
-        transform: translateY(-3px) ;
-        box-shadow: 4px 4px var(--primary);
+        transform: translateY(-2px) ;
+        box-shadow: 0px 2px var(--primary);
     }
 }
+
 
 label{
     margin-bottom:0;
@@ -344,5 +345,8 @@ p{
 
 .font-weight-bolder{
     font-weight: bolder;
+}
+.font-weight-normal{
+    font-weight: normal;
 }
 
