--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -207,6 +207,44 @@ input[type="checkbox"] {
     }
 }
 
+select{
+    cursor: pointer;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    transition: none;
+    background-image:
+            linear-gradient(45deg, transparent 50%, var(--background) 50%),
+            linear-gradient(135deg,var(--background) 50%, transparent 50%),
+            radial-gradient(var(--primary) 70%, transparent 72%);
+    background-position:
+            calc(100% - 20px) calc(1em + 2px),
+            calc(100% - 15px) calc(1em + 2px),
+            calc(100% - .5em) .5em;
+    background-size:
+            5px 5px,
+            5px 5px,
+            1.5em 1.5em;
+    background-repeat: no-repeat;
+    &:focus {
+        transform: rotate(-180deg);
+        background-image:
+                linear-gradient(45deg, white 50%, transparent 50%),
+                linear-gradient(135deg, transparent 50%, white 50%),
+                radial-gradient(var(--primary) 70%, transparent 72%);
+        background-position:
+                calc(100% - 15px) 1em,
+                calc(100% - 20px) 1em,
+                calc(100% - .5em) .5em;
+        background-size:
+                5px 5px,
+                5px 5px,
+                1.5em 1.5em;
+        background-repeat: no-repeat;
+        border-color: green;
+        outline: 0;
+    }
+}
 
 label{
     margin-bottom:0;
