--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -85,21 +85,34 @@ body {
     --light-green:  #9ad379;
 
 }
-html{
+html {
+    /* Webkit-based browsers (Chrome, Safari) */
     &::-webkit-scrollbar {
-        width: 12px;
+        width: 10px;
+        background: transparent;
     }
     &::-webkit-scrollbar-track {
-        background-color: rgba(231, 231, 231, 0);
-        border: 1px solid rgba(202, 202, 202, 0);
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+        background: transparent;
     }
     &::-webkit-scrollbar-thumb {
-        border-radius: 8px;
-        background-color: var(--scrollbarthumb);
+        border-radius: var(--border-radius);
+        background-color: var(--primary);
+    }
+    &::-webkit-scrollbar-track-piece {
+        background: transparent;
     }
 
+    /* Standard scrollbar properties (for Firefox and others) */
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary) transparent;
 }
+
+/* This is the track, which is hidden in Firefox but styled in Webkit browsers */
+html {
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary) transparent;
+}
+
 
 
 a {
