--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1683,7 +1683,7 @@ input[type=time] {
     position: relative;
     padding: 10px;
     height: 1.5em;
-    color: var(--primary);
+    color: var(--text);
     background-color: var(--darkonbackground);
     border: 1px solid var(--primary);
     border-radius: var(--border-radius);
@@ -1707,3 +1707,46 @@ input[type=time] {
         box-shadow: -4px 4px var(--primary);
     }
 }
+
+
+.dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1000;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+
+
+.dialog-content {
+    position: relative; /* Add position relative to create a positioning context */
+    min-width: 400px;
+    min-height: 500px;
+    padding: 20px;
+    background: var(--background);
+    border-radius: var(--border-radius);
+    border: 2px solid var(--primary);
+    box-shadow: -4px 4px var(--primary);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1.5rem;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: var(--text);
+}
+
