--- a/webapp/src/main/webapp/resources/css/service.css
+++ b/webapp/src/main/webapp/resources/css/service.css
@@ -16,8 +16,11 @@
         margin:0;
         padding:0;
         & .back-image{
+            object-fit: cover;
+            object-position: center bottom;
             width: 100%;
             max-height: 30vh;
+
         }
     }
 
@@ -29,26 +32,19 @@
         &::before {
             content: "";
             position: absolute;
-            top: -60px;
+            top: -65px;
             left: 50%;
             transform: translate(-50%, 0);
             background-size: cover;
+            object-fit: cover;
+            background-color: var(--onbackground);
             background-image: var(--background-image);  /*This is ok no worries*/
             width: 130px;
             height: 130px;
+            border: 10px solid var(--onbackground);
             border-radius: 50%;
         }
-        &::after {
-            content: "";
-            position: absolute;
-            top: -35px;
-            left: 50%;
-            transform: translate(-50%, 0);
-            background-repeat: no-repeat;
-            width: 70px;
-            height: 70px;
-            border-radius: 50%;
-        }
+
         & .inner {
             position: relative;
             margin-top: 50px;
@@ -177,93 +173,94 @@
 
 
 /*--------------------------tabbed box ---------------*/
+.tabbed-box{
+    & section {
+        background-color: var(--onbackground);
+        display: none;
+        padding: 20px;
+        border-top: 1px solid var(--primary);
+        border-bottom: 1px solid var(--primary);
+        border-left: 1px solid var(--primary);
+        border-right: 1px solid var(--primary);
+        z-index: -1;
+        transform: translateY(-4px);
+        box-shadow: 0 4px 0 0 var(--primary);
+        border-radius:0 var(--border-radius) var(--border-radius) var(--border-radius);
+    }
 
-section {
-    background-color: var(--onbackground);
-    display: none;
-    padding: 20px;
-    border-top: 1px solid var(--primary);
-    border-bottom: 1px solid var(--primary);
-    border-left: 1px solid var(--primary);
-    border-right: 1px solid var(--primary);
-    z-index: -1;
-    transform: translateY(-4px);
-    box-shadow: 0 4px 0 0 var(--primary);
-    border-radius:0 var(--border-radius) var(--border-radius) var(--border-radius);
-}
+    & input[type=radio]{
+        display: none;
+    }
 
-input[type=radio]{
-    display: none;
-}
+    & label {
+        position: relative;
+        display: inline-block;
+        border: 1px solid var(--primary);
+        padding: 15px 25px;
+        font-weight: bolder;
+        text-align: center;
+        color: var(--lighttext);
+        width: 32%;
+        background-color: var(--onbackground);
 
-label {
-    position: relative;
-    display: inline-block;
-    border: 1px solid var(--primary);
-    padding: 15px 25px;
-    font-weight: bolder;
-    text-align: center;
-    color: var(--lighttext);
-    width: 32%;
-    background-color: var(--onbackground);
+        border-radius: var(--border-radius) var(--border-radius) 0 0;
+        border-bottom: 1px solid transparent;
+        transform: translateY(-2px);
+        &:before {
+            font-weight: normal;
+            margin-right: 10px;
+        }
 
-    border-radius: var(--border-radius) var(--border-radius) 0 0;
-    border-bottom: 1px solid transparent;
-    transform: translateY(-2px);
-    &:before {
-        font-weight: normal;
-        margin-right: 10px;
+
+        &:hover {
+            color: var(--old-primary);
+            cursor: pointer;
+        }
+
     }
 
 
-    &:hover {
-        color: var(--old-primary);
-        cursor: pointer;
+    & input:checked + label {
+        color: var(--primary);
+        z-index: 2;
+        border-left: 1px solid var(--primary);
+        border-right: 1px solid var(--primary);
+        border-top: 3px solid var(--primary);
+        border-bottom: 2px solid transparent;
     }
 
-}
-
-
-input:checked + label {
-    color: var(--primary);
-    z-index: 2;
-    border-left: 1px solid var(--primary);
-    border-right: 1px solid var(--primary);
-    border-top: 3px solid var(--primary);
-    border-bottom: 2px solid transparent;
-}
-
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
-    display: flex;
-}
-
-
-#content1 {
-    & .container {
-        padding: 0;
-        margin: 0;
+    & #tab1:checked ~ #content1,
+    & #tab2:checked ~ #content2,
+    & #tab3:checked ~ #content3,
+    & #tab4:checked ~ #content4 {
+        display: flex;
     }
-    & .review-box {
-        padding: 1.5rem;
-        margin: 1.5rem;
-        background-color: var(--darkonbackground);
-        color: var(--text);
-        border-radius: var(--border-radius);
+
+
+    & #content1 {
+        & .container {
+            padding: 0;
+            margin: 0;
+        }
+        & .review-box {
+            padding: 1.5rem;
+            margin: 1.5rem;
+            background-color: var(--darkonbackground);
+            color: var(--text);
+            border-radius: var(--border-radius);
+        }
     }
-}
 
-.background-cover{
+    & .background-cover{
 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: all 0.3s ease-in-out;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 0.3s ease-in-out;
 
-    border-top-left-radius: var(--border-radius);
-    border-bottom-left-radius: var(--border-radius);
-    background-position: bottom center;
-    background-size: cover;
+        border-top-left-radius: var(--border-radius);
+        border-bottom-left-radius: var(--border-radius);
+        background-position: bottom center;
+        background-size: cover;
+    }
 }
