--- a/webapp/src/main/webapp/resources/css/service.css
+++ b/webapp/src/main/webapp/resources/css/service.css
@@ -162,6 +162,19 @@
         transform: translateY(-4px);
         box-shadow: 0 4px 0 0 var(--primary);
     }
+
+    & .background-cover{
+
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 0.3s ease-in-out;
+
+        border-top-left-radius: var(--border-light);
+        border-bottom-left-radius: var(--border-light);
+        background-position: bottom center;
+        background-size: cover;
+    }
 }
 
 
@@ -254,7 +267,7 @@
     & .background-cover{
 
         width: 100%;
-        height: 100%;
+        height: 100px;
         object-fit: cover;
         transition: all 0.3s ease-in-out;
 
